--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ minecraft_version=1.20.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.1,1.21)
 # The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=47.3.0
+forge_version=47.2.17
 # The Forge version range can use any version of Forge as bounds or match the loader version range
 forge_version_range=[47,)
 # The loader version range can only use the major version of Forge/FML as bounds
@@ -47,7 +47,7 @@ mapping_version=2023.09.03-1.20.1
 # Must match the String constant located in the main mod class annotated with @Mod.
 mod_id=moraymobs
 # The human-readable display name for the mod.
-mod_name=Moray's Mobs
+mod_name=Moray's Monsters
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
